tests/valid/interfaces/single_method.fig
// Interface with a single method declaration
interface Printable
    func print(*self) -> ok
