tests/invalid/syntax/interface_with_body.fig
// Invalid: Interface with function body
interface BadInterface
    func method(*self) -> ok
        pass
